2010-10-06  Matthew Mundell <matthew.mundell@greenbone.net>

	Add LSC credential editing.

	* src/html/src/omp.xsl (html-lsc-credentials-table): Increase action
	column width.
	(html-edit-lsc-credential-form, edit_lsc_credential)
	(modify_lsc_credential_response): New templates.
	(get_lsc_credential): Add COMMANDS to GET_LSC_CREDENTIALS path.  Apply
	modify response template.

	* src/gsad.c (init_validator): Add edit_lsc_credential and
	save_lsc_credential commands.
	(exec_omp_get): Add edit_lsc_credential and save_lsc_credential handling.

	* src/gsad_omp.c (get_lsc_credential, get_lsc_credentials): New function.
	From _omp counterpart, with commands arg.  In get_lsc_credentials allow
	result_len to be NULL.
	(get_lsc_credential_omp, get_lsc_credentials_omp): Replace body with call.
	(edit_lsc_credential, edit_lsc_credential_omp)
	(save_lsc_credential_omp): New functions.

	* src/gsad_omp.h: Add headers accordingly.

2010-10-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add & to lsc_password.

	* src/gsad_omp.c (openvas_server_sendf_xml): Move up in file.
	(create_lsc_credential_omp): Send with openvas_server_sendf_xml.

2010-10-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (check_modify_report_format): Add validation error check.

	* src/html/omp.xsl (param-edit): Set text input size according to param
	type.

2010-10-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_report_format_omp): Add NULL gaurd around param
	loop.

2010-09-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (param-edit): Make input field match param type.
	(param-details): Make value column match param type.

2010-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-formats-table): Add "(last verified)" to
	trust heading.

2010-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	Add editing of report format active flag.
