@@ -1,4 +1,13 @@
-2010-10-06  Matthew Mundell <matthew.mundell@greenbone.net>
+2010-10-07  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/html/src/omp.xsl (html-edit-lsc-credential-form): Replace login
+	with credential_login.
+
+	* src/gsad.c (validate): Neaten doc.
+	(exec_omp_post): For create_lsc_credential and save_lsc_credential use
+	credential_login instead of login.
+
+2010-10-07  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	Add LSC credential editing.
 
